fixed text alignment

--- a/style.css
+++ b/style.css
@@ -281,38 +281,6 @@ a.nav-link{
       About Me
 ──────────────────*/
 
-.aboutme {
-	text-align:left;
-    color: var(--main-fonts-color);
-	z-index: 1;
-	margin: auto;
-	padding: 20px;
-}
-
-.aboutme  p{
-    margin: 5px;
-	font-size:1.2rem;
-	font-family: var(--main-font-family);
-	text-align:center;
-}
-.aboutme  h3{
-	padding-bottom: 15px;
-    letter-spacing: normal;
-    font-family: var(--main-font-family);
-	font-style: normal;
-	font-size: 60px;
-	color: var(--main-fonts-color);
-	text-shadow: 0px 0px 40px var(--main-decor-color);
-	text-align: center;
-}
-
-.aboutme  img{
-
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 40%;}
-
 #aboutme {
 	text-align:center;
     color: var(--main-fonts-color);
@@ -325,7 +293,7 @@ a.nav-link{
     margin: 5px;
 	font-size:1.2rem;
 	font-family: var(--main-font-family);
-	text-align:center;
+	text-align:left;
 }
 #aboutme  h3{
 	padding-bottom: 15px;
